solved problems with form

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ margin-top:-40px;
     height:58px;
     width:580px;
     background-color:rgb(69,69,69);
+    border:0;
 }
 
 .background{
@@ -148,6 +149,9 @@ margin-top:-40px;
     font-family: "Lato";
     color: rgb(190, 190, 190);
 
+}
+.smallimg:hover {
+color:#0085a1;
 }
 
 #footer{
